fix(scroll): can now scroll if text is off screen

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
   padding: 0;
   opacity: 0;
   transition: opacity 1.5s;
-  overflow: hidden;
 }
 
 .bn-main {
